# photo-archiver

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  diesel.toml  entry.sh
migrations/2021-08-15-223913_create_media/: down.sql  up.sql
src/: archiver.rs  downloader.rs  item.rs  main.rs  media_item_iter.rs
src/metadata/: mod.rs  models.rs  schema.rs
