[package]
name = "photo-archiver"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]
edition = "2018"
default-run = "photo-archiver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
google-photoslibrary1 = { path = "../google-apis-rs/gen/photoslibrary1" }
hyper = "0.14.11"
hyper-rustls = "0.22.1"
serde_json = "1.0.66"
structopt = "0.3.22"
tokio = { version = "1.10.0", features = [ "macros", "rt-multi-thread" ] }
yup-oauth2 = { git = "https://github.com/iburinoc/yup-oauth2", branch = "noninteractive-authenticator" }
