[package]
name = "photo-archiver"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]
edition = "2018"
default-run = "photo-archiver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
derive_more = "0.99.16"
enum-utils = "0.1.2"
eyre = "0.6.5"
futures = "0.3.16"
google-photoslibrary1 = { path = "../google-apis-rs/gen/photoslibrary1" }
hyper = "0.14.11"
hyper-rustls = "0.22.1"
reqwest = { version = "0.11.4", features = ["brotli", "deflate", "gzip", "stream"] }
serde_json = "1.0.66"
structopt = "0.3.22"
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = [ "fs", "macros", "rt-multi-thread" ] }
yup-oauth2 = { git = "https://github.com/iburinoc/yup-oauth2", branch = "noninteractive-authenticator" }
